<resources>
    <string name="app_name" translatable="false">SimpleReminder</string>
    <string name="dialog_welcome_title">Welcome</string>
    <string name="welcome_message">Welcome to SimpleReminder! This is an early version and your feedback is needed (see \"About\").\n\nPlease test whether reminders work reliably on your device and report it if not.\n\nSimpleReminder is free software (licensed under the GNU General Public License) and comes without any warranty.</string>
    <string name="welcome_message_update">Welcome to an updated version of SimpleReminder!\n\nPlease test whether reminders work reliably on your device and report it if not.\n\nThe app is continually being developed and your feedback is needed - see \"About\" for more information.</string>
    <string name="toast_info_add_reminder_dialog">Tip: There is a launcher icon to reach this dialog!</string>
    <string name="dialog_startup_grant_permission">Grant permission</string>
    <string name="dialog_startup_later">Later</string>
    <string name="dialog_startup_dont_show_again">Don\'t show again</string>
    <string name="dialog_startup_disable_battery_optimization_title">Battery Optimization</string>
    <string name="dialog_startup_disable_battery_optimization_message">You must disable battery optimization so that reminders can be shown reliably.\n\nSimpleReminder still only becomes active when a scheduled reminder is due.</string>
    <string name="dialog_startup_disable_battery_optimization_message_API31">If reminders are not shown on time, disabling battery optimization might help.\n\nSimpleReminder still only becomes active when a scheduled reminder is due.</string>
    <string name="dialog_startup_disable_battery_optimization_turn_off">Turn off for SimpleReminder</string>
    <string name="dialog_startup_schedule_exact_title">Scheduling permission</string>
    <string name="dialog_startup_schedule_exact_message">You have to grant permission for the app to be able to show reminders on time.</string>
    <string name="dialog_startup_show_notifications_title">Notifications</string>
    <string name="dialog_startup_show_notifications_message">For the app to be able to show reminders, you have to grant the notification permission.</string>
    <string name="dialog_startup_run_on_boot_title">@string/preference_run_on_boot</string>
    <string name="dialog_startup_run_on_boot_message">To keep showing reminders after a restart of the device, please allow the app to run on startup.</string>
    <string name="dialog_startup_run_on_boot_enable">Enable</string>
    <string name="add_reminder">Add reminder</string>
    <string name="quick_tile_add_reminder_label">@string/add_reminder</string>
    <string name="shortcut_add_reminder">@string/add_reminder</string>
    <string name="action_button_add_reminder">@string/add_reminder</string>
    <string name="shortcut_reminders_list">Show reminders</string>
    <string name="add_reminder_title">@string/add_reminder</string>
    <string name="add_reminder_name_hint">Reminder text (optional)</string>
    <string name="add_reminder_nagging_tooltip">Nagging</string>
    <string name="edit_reminder_title">Edit reminder</string>
    <string name="edit_reminder_add_button">@android:string/ok</string>
    <string name="button_add_reminder">Add</string>
    <string name="keyboard_action_add_reminder">Add</string>
    <string name="add_reminder_toast_nagging_enabled">Nagging set to %s</string>
    <string name="add_reminder_toast_due">Reminder due in %s</string>
    <string name="add_reminder_toast_due_nagging">Nagging reminder due in %s</string>
    <string name="add_reminder_toast_due_in_past">Reminder due in the past</string>
    <string name="duration_minute">%d minute</string>
    <string name="duration_minutes">%d minutes</string>
    <string name="duration_hour">%d hour</string>
    <string name="duration_hours">%d hours</string>
    <string name="duration_day">%d day</string>
    <string name="duration_days">%d days</string>
    <string name="duration_conjunction">,\u0020</string>
    <string name="duration_conjunction_last">\u0020and\u0020</string>
    <string name="duration_less_than_a_minute">less than a minute</string>
    <string name="add_reminder_toast_invalid_date">Invalid date: must be in the future</string>
    <string name="dialog_choose_repeat_interval_title">Set repeat interval</string>
    <string name="channel_name">Reminders</string>
    <string name="channel_description">Shown when a reminder is due</string>
    <string name="notification_title">Reminder</string>
    <string name="title_activity_reminders_list">@string/app_name</string>
    <string name="tab_reminders">Current</string>
    <string name="tab_templates">Templates</string>
    <string name="menu_entry_settings">Settings</string>
    <string name="menu_entry_help">Help</string>
    <string name="menu_entry_about">About</string>
    <string name="reminder_list_action_placeholder">Coming soon!</string>
    <string name="reminder_list_action_copy_text">Copy text</string>
    <string name="reminder_list_action_copy_text_feedback">Copied to clipboard</string>
    <string name="reminder_list_action_reschedule">Reschedule</string>
    <string name="reminder_list_action_mark_done">Mark done</string>
    <string name="reminder_list_action_add_template">Add as template</string>
    <string name="reminder_list_action_delete">Delete</string>
    <string name="reminder_list_action_select_all">Select all</string>
    <string name="reminder_section_due">Due</string>
    <string name="reminder_section_done">Done</string>
    <string name="reminder_section_future">Future</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preference_category_general">General</string>
    <string name="preference_category_notifications">Notifications</string>
    <string name="preference_category_ui">User interface</string>
    <string name="preference_priority">Priority of notifications</string>
    <string name="preference_enable_sound">Enable sound of notifications</string>
    <string name="preference_nagging_repeat_interval">Default repeat interval for nagging reminders</string>
    <string name="preference_nagging_repeat_interval_format_error">The repeat interval must be a positive number of minutes</string>
    <string name="preference_notification_channel_settings">Change notification settings</string>
    <string name="preference_notification_time_display">Displayed time in notifications</string>
    <string name="preference_category_notifications_display">Display original due time in notification (instead of time when notification is shown)</string>
    <string name="preference_display_original_due_time_normal">First time</string>
    <string name="preference_display_original_due_time_nag">Nag</string>
    <string name="preference_display_original_due_time_recreate">Recreation</string>
    <string name="preference_display_original_due_time_normal_descr">When a notification is shown for the first time (this will make a difference when a reminder is shown delayed, for example after startup of the device, or if the system for some reason delayed the reminder)</string>
    <string name="preference_display_original_due_time_nag_descr">When a notification is shown again for a nagging reminder</string>
    <string name="preference_display_original_due_time_recreate_descr">When a notification is reproduced after it has been removed by the system (because of device restart, force-stopping the app etc.)</string>
    <string name="preference_category_reminder_dialog">Reminder dialog settings</string>
    <string name="preference_reminder_dialog_close_keyboard_on_timepicker_use">Close keyboard when using clock</string>
    <string name="preference_reminder_dialog_close_keyboard_on_timepicker_use_descr">When touching the time picker clock, close the keyboard automatically.</string>
    <string name="preference_reminder_dialog_timepicker_show_keyboard_button">Keyboard button</string>
    <string name="preference_reminder_dialog_timepicker_show_keyboard_button_descr">Allows to switch between clock and text input for selecting time. Soon it will be possible to type the time directly in the description field.</string>
    <string name="preference_reminder_dialog_timepicker_customize_size">Apply custom sizes set below</string>
    <string name="preference_reminder_dialog_timepicker_customize_size_descr">Change sizes of components in the dialog to fit smaller screens or match personal preferences. Does not apply in landscape mode.</string>
    <string name="preference_reminder_dialog_timepicker_text_size">Time display size</string>
    <string name="preference_reminder_dialog_timepicker_text_size_format_error">Choose a positive number</string>
    <string name="preference_reminder_dialog_timepicker_height">Clock height</string>
    <string name="preference_reminder_dialog_timepicker_height_format_error">Choose a positive number</string>
    <string name="preference_reminder_dialog_timepicker_sizes_recommended">(recommended: %s)</string>
    <string name="preference_reminder_dialog_show">Show reminder dialog</string>
    <string name="preference_category_app">Run conditions</string>
    <string name="preference_run_on_boot">Activate on device startup</string>
    <string name="preference_run_on_boot_summary_off">After a restart of the device, reminders will not be shown until opening the app.</string>
    <string name="preference_run_on_boot_summary_on">Continue showing reminders after a restart of the device.</string>
    <string name="preference_disable_battery_optimization">Battery optimization</string>
    <string name="preference_disable_battery_optimization_summary_yes">OK. Battery optimization is disabled for SimpleReminder, reminders will be shown on time. Click to open settings.</string>
    <string name="preference_disable_battery_optimization_summary_yes_API31">Battery optimization is disabled for SimpleReminder - this should not be necessary on Android 12 when \"Alarms &amp; Reminders\" is allowed, but if reminders are otherwise not shown on time, this might help. Click to open settings.</string>
    <string name="preference_disable_battery_optimization_summary_yes_API33">Battery optimization is disabled for SimpleReminder - this should not be necessary anymore from Android 13 on, but if reminders are otherwise not shown on time, this might help. Click to open settings.</string>
    <string name="preference_disable_battery_optimization_summary_no">NOTE: Battery optimization is enabled - reminders might not be shown on time (or not at all after the device was idle for too long). Click to disable for SimpleReminder.</string>
    <string name="preference_disable_battery_optimization_summary_no_API31_exactAllowed">Battery optimization is enabled - on Android 12 this should not be a problem (as \"Alarms &amp; Reminders\" is allowed), but if you experience reminders not being shown on time, consider disabling it for SimpleReminder (click here).</string>
    <string name="preference_disable_battery_optimization_summary_no_API31_exactNotAllowed">NOTE: Battery optimization is enabled and \"Alarms &amp; Reminders\" is not allowed. Reminders might not be shown on time (or not at all after the device was idle for too long). Click to allow \"Alarms &amp; Reminders\".</string>
    <string name="preference_disable_battery_optimization_summary_no_API33">Battery optimization is enabled - from Android 13 on this should not be a problem, but if you experience reminders not being shown on time, consider disabling it for SimpleReminder (click here).</string>
    <string name="preference_category_other">Other</string>
    <string name="preference_reset_dont_show_again">Reset \"Don\'t show again\" choices</string>
    <string name="toast_reset_dont_show_again">\"Don\'t show again\" choices have been reset.</string>
</resources>