<!--
  ~ Copyright (C) 2019 Felix Wiemuth
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="felixwiemuth.simplereminder.ui.reminderslist.RemindersListActivity">
    <item
        android:id="@+id/action_reschedule"
        android:title="@string/reminder_list_action_reschedule"
        android:icon="@drawable/ic_restore"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/reminder_list_action_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_template"
        android:title="@string/reminder_list_action_add_template"
        android:icon="@drawable/ic_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_mark_done"
        android:title="@string/reminder_list_action_mark_done"
        android:icon="@drawable/ic_check_circle_outline"
        app:showAsAction="ifRoom" />
<!--    <item-->
<!--        android:id="@+id/action_edit"-->
<!--        android:title="@string/reminder_list_action_edit"-->
<!--        android:icon="@drawable/ic_edit"-->
<!--        app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/action_copy_text"
        android:title="@string/reminder_list_action_copy_text"
        android:icon="@drawable/ic_content_copy"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_select_all"
        android:title="@string/reminder_list_action_select_all"
        android:icon="@drawable/ic_select_all"
        app:showAsAction="ifRoom" />
</menu>
